[gd_scene load_steps=6 format=3 uid="uid://1ab8g8fi54i8"]

[ext_resource type="Script" path="res://Scripts/pet/chromatic_laser.gd" id="1_eoi02"]
[ext_resource type="Texture2D" uid="uid://v1hapkw27a8l" path="res://Assets/Sprites/pets/crystal_beast.png" id="2_2cmxo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x78cu"]
radius = 3.0
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_wrj1k"]
atlas = ExtResource("2_2cmxo")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pjo8d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrj1k")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="chromatic_laser" type="Area2D"]
collision_layer = 12
collision_mask = 13
script = ExtResource("1_eoi02")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_x78cu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pjo8d")

[node name="life_time_timer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="life_time_timer" to="." method="_on_life_time_timer_timeout"]
